Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14130

InnoDB messages should not refer to the MySQL 5.7 manual

    XMLWordPrintable

Details

    Description

      InnoDB error log messages in MariaDB 10.2 and later should not refer to MySQL 5.7 documentation.
      With MariaDB 10.0 and 10.1 it is a little more acceptable to point to the 5.6 documentation, because the features have not yet diverged that much yet.
      The InnoDB source code in 10.2 contains the following links that must be replaced with links to the Knowledge Base:

      http://dev.mysql.com/doc/refman/5.7/en/operating-system-error-codes.html (non-existing page!)
      http://dev.mysql.com/doc/refman/5.7/en/innodb-file-format.html (only used in deprecation messages; we can simply remove this link)
      http://dev.mysql.com/doc/refman/5.7/en/forcing-innodb-recovery.html
      http://dev.mysql.com/doc/refman/5.7/en/innodb-troubleshooting.html
      http://dev.mysql.com/doc/refman/5.7/en/innodb-troubleshooting-datadict.html
      http://dev.mysql.com/doc/refman/5.7/en/error-creating-innodb.html
      http://dev.mysql.com/doc/refman/5.7/en/innodb-foreign-key-constraints.html
      http://dev.mysql.com/doc/refman/5.7/en/set-transaction.html
      http://dev.mysql.com/doc/refman/5.7/en/innodb-parameters.html (should point to https://mariadb.com/kb/en/mariadb/xtradbinnodb-server-system-variables/ instead)
      http://dev.mysql.com/doc/refman/5.7/en/upgrading.html
      http://dev.mysql.com/doc/refman/5.7/en/upgrading-downgrading.html

      We need the https://mariadb.com/kb/en/ equivalents of all the links, so that they can be replaced.
      I guess that http://dev.mysql.com/doc/refman/5.7/en/ could be directly replaced with https://mariadb.com/kb/en/ or some InnoDB specific page.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.